Fixed alignment issue with images

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,6 +166,15 @@ img {
     height: 50px;
 }
 
+.text-content {
+    padding-left: 100px;
+    font-weight: 600;
+}
+
+.list-margin{
+    margin-top: 30px;
+}
+
 .col-sm-6 img {
     padding-left: 100px;
     padding-bottom: 50px; 
